Revert "fix: paragraph spacing in quill"

--- a/frappe/public/scss/common/quill.scss
+++ b/frappe/public/scss/common/quill.scss
@@ -292,12 +292,6 @@
 	}
 }
 
-.ql-editor {
-	p:not(:first-child) {
-		margin-top: 0.75rem;
-	}
-}
-
 .ql-editor td {
 	border: 1px solid var(--dark-border-color);
 }
